manifests/stack/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ttn-lw-stack
  namespace: thingstack
spec:
  selector:
    matchLabels:
      app: ttn-lw-stack
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ttn-lw-stack
      name: ttn-lw-stack
    spec:
      containers:
        - name: stack
          args:
            - start
          command:
            - ttn-lw-stack
            - -c
            - /config/ttn-lw-stack-docker.yaml
          image: ttn-stack
          ports:
            - name: http
              containerPort: 1885
            - name: https
              containerPort: 8885
            - name: gwdata-mqttv2
              containerPort: 1881
            - name: gwdata-mqttsv2
              containerPort: 8881
            - name: gwdata-mqtt
              containerPort: 1882
            - name: gwdata-mqtts
              containerPort: 8882
            - name: appdata-mqtt
              containerPort: 1883
            - name: appdata-mqtts
              containerPort: 8883
            - name: grpc
              containerPort: 1884
            - name: grpcs
              containerPort: 8884
            - name: back-interfaces
              containerPort: 8886
            - name: lora-lns-ws
              containerPort: 1887
            - name: lora-lns-wss
              containerPort: 8887
            - name: semtech-fwd
              containerPort: 1700
              protocol: UDP
          volumeMounts:
            - mountPath: /srv/ttn-lorawan/public/blob
              name: stack-blob
            - mountPath: /config
              name: stack-config
            - mountPath: /var/lib/certificates
              name: stack-acme
      volumes:
        - name: stack-blob
          persistentVolumeClaim:
            claimName: stack-blob
        - name: stack-config
          configMap:
            name: ttn-lw-stack-config
        - name: stack-acme
          secret:
            secretName: ttn-tls
